	* Bugfix: #189 Problems with character set conversion when server character sets are not utf-8
	* Bugfix: Problems with close handling for popups in IE8. Redesigned callback structure
	* Bugfix: #199 Parsing mysql date (standard date YYYY-MM-DD) failed. Birthdays were not received correct from form field
	* Change: TodoyuTime::parseDateString has now a fallback to strtotime() if date was not recognized before
	* Change: Made TodoyuLabelManager::$cache private
	* Change: Made TodoyuLabelManger::getFallbackLocales private
	* Change: Comment out unused database relation input field (relations have their own sub fields)
	* Change: Cleanup adding the language file for jscalendar
	* Change: Set default dummy timezone to prevent problems with date() before setting the users timezone
	* Change: Allow installation in not empty database (as long as no conflicts with existing tables occurs)
	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
	* Add: Translated log levels in core/locale/en_GB/global.xml
	* Add: Caching for class autoloader
	* Add: Custom callback on empty result for searchlist panel widget
	* Add: TodoyuMail::setCurrentUserAsSender() as a shortcut
	* Remove: Removed unused function TodoyuArray::convertToUTF8Array
	* Update: JsCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
	* Update: tinyMCE 3.4.4

	

core 2.1.1 - 2011-07-25
	* Feature: Added optional event identifier to error/success notifications- notifications of the same event are now closing preceding notes of the same event (if present)
	* Bugfix: Installer- Fixed icon display bug of installer steps with long labels
	* Bugfix: open duration picker wasn't hidden when closing parent dialog
	* Bugfix: Added more tags to the badHtmlTags list to make sure they are escaped and not rendered (ex: embed)
	* Bugfix: Parsing dates in british english format failed (was interpreted as american)