@@ -16,6 +16,8 @@ p {
 .oops {
 	font-weight:bold;
 	font-size:80px;
+	height: 56px;
+    margin-top: 37px;
 }
 .info {
 	font-size: 20px;
