@@ -3,5 +3,5 @@
 	<option value="0" disabled="disabled">---------------------------</option>
 {/if}
 {foreach $options option}
-	<option value="{htmlencode $option.value}" class="{$option.class} {cycle values="odd,even"}" {if in_array($option.value, $value)} selected="selected"{/if}{if $option.disabled} disabled="disabled"{/if}>{htmlencode(Label($option.label))}</option>
+	<option value="{htmlencode $option.value}" class="{$option.classname} {cycle values="odd,even"}" {if in_array($option.value, $value)} selected="selected"{/if}{if $option.disabled} disabled="disabled"{/if}>{htmlencode(Label($option.label))}</option>
 {/foreach}
