@@ -6,6 +6,7 @@ core 2.1.2 - ???
 	* Bugfix: #189 Problems with character set conversion when server character sets are not utf-8
 	* Bugfix: Problems with close handling for popups in IE8. Redesigned callback structure
 	* Bugfix: #199 Parsing mysql date (standard date YYYY-MM-DD) failed. Birthdays were not received correct from form field
+	* Bugfix: Option class name was not used (invalid variable name in template)
 	* Change: TodoyuTime::parseDateString has now a fallback to strtotime() if date was not recognized before
 	* Change: Made TodoyuLabelManager::$cache private
 	* Change: Made TodoyuLabelManger::getFallbackLocales private
@@ -13,11 +14,13 @@ core 2.1.2 - ???
 	* Change: Cleanup adding the language file for jscalendar
 	* Change: Set default dummy timezone to prevent problems with date() before setting the users timezone
 	* Change: Allow installation in not empty database (as long as no conflicts with existing tables occurs)
+	* Change: Simplified TodoyuForm::injectFieldset (by Captain_FLAM)
 	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
 	* Add: Translated log levels in core/locale/en_GB/global.xml
 	* Add: Caching for class autoloader
 	* Add: Custom callback on empty result for searchlist panel widget
 	* Add: TodoyuMail::setCurrentUserAsSender() as a shortcut
+	* Add: Confirm removal of sub record in db relation in form
 	* Remove: Removed unused function TodoyuArray::convertToUTF8Array
 	* Update: JsCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
 	* Update: tinyMCE 3.4.4
